read and update database data

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/TA-Immersive-Visualization/[Ll]ibrary/
+/TA-Immersive-Visualization/[Tt]emp/
+/TA-Immersive-Visualization/[Oo]bj/
+/TA-Immersive-Visualization/[Bb]uild/
+/TA-Immersive-Visualization/[Bb]uilds/
+/TA-Immersive-Visualization/[Ll]ogs/
+/TA-Immersive-Visualization/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
